Add Quick Action support

--- a/Founders D&G/Info.plist
+++ b/Founders D&G/Info.plist
@@ -32,6 +32,25 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>front-door</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Open Front Door</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).openFrontDoor</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>garage-door</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Open Garage Door</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).openGarageDoor</string>
+		</dict>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
