Add Location setting permission message

--- a/Founders D&G/Settings.bundle/Root.plist
+++ b/Founders D&G/Settings.bundle/Root.plist
@@ -59,6 +59,8 @@
 		<dict>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
+			<key>FooterText</key>
+			<string>When activated, you can trigger Siri and say &apos;Open Founders front door&apos; or &apos;Open Founders garage door&apos;.</string>
 		</dict>
 		<dict>
 			<key>Type</key>
@@ -73,16 +75,10 @@
 		<dict>
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Notifications</string>
-			<key>Key</key>
-			<string>notifications_preference</string>
-			<key>DefaultValue</key>
-			<false/>
+			<string>About</string>
+			<key>FooterText</key>
+			<string>Developed by António Ramadas</string>
 		</dict>
 	</array>
 </dict>
