Add authentication message to Today Widget and improve its UX

--- a/widget/Info.plist
+++ b/widget/Info.plist
@@ -27,5 +27,9 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widget-extension</string>
 	</dict>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>The app requires &apos;While Using the App&apos; location to prevent you from opening the doors while you are not close to the building.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>The app requires &apos;While Using the App&apos; location to prevent you from opening the doors while you are not close to the building.</string>
 </dict>
 </plist>
